--- a/cardapio-onlide/.env
+++ b/cardapio-onlide/.env
@@ -1,20 +1,18 @@
-# Backend
+
 PORT=3001
 NODE_ENV=development
 
-# Banco de Dados
 DB_HOST=mysql
 DB_USER=cardapio_user
 DB_PASSWORD=cardapio_pass
 DB_NAME=cardapio_db
 
-# Autenticação
 JWT_SECRET=seu-jwt-secret-aqui
 
-# Frontend
-REACT_APP_API_URL=http://localhost:3001
+VITE_API_URL=http://localhost:3001/api
+VITE_APP_NAME=Sistema de Cardápio
+VITE_NODE_ENV=development
 
-# AWS (Produção)
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=sua-key
 AWS_SECRET_ACCESS_KEY=sua-secret
