--- a/cardapio-onlide/backend/package.json
+++ b/cardapio-onlide/backend/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
+    "test": "jest",
+    "migrate": "node scripts/migrate.js",
+    "seed": "node scripts/seed.js",
+    "init-db": "node scripts/init-database.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -16,11 +19,22 @@
     "helmet": "^7.0.0",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
     "jest": "^29.6.1",
     "supertest": "^6.3.3"
-  }
+  },
+  "keywords": [
+    "nodejs",
+    "express",
+    "mysql",
+    "sequelize",
+    "cardapio",
+    "restaurant"
+  ],
+  "author": "",
+  "license": "ISC"
 }
