--- a/cardapio-onlide/docker-compose.yml
+++ b/cardapio-onlide/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Frontend React
   frontend:
@@ -47,7 +45,7 @@ services:
       - cardapio-network
     restart: unless-stopped
 
-  # Banco MySQL
+  # Banco MySQL - CONFIGURAÇÃO MELHORADA
   mysql:
     image: mysql:8.0
     ports:
@@ -57,18 +55,29 @@ services:
       MYSQL_DATABASE: cardapio_db
       MYSQL_USER: cardapio_user
       MYSQL_PASSWORD: cardapio_pass
+      # Configurações adicionais para evitar problemas
+      MYSQL_CHARSET: utf8mb4
+      MYSQL_COLLATION: utf8mb4_unicode_ci
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./backend/database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./backend/database/init.sql:/docker-entrypoint-initdb.d/01-init.sql
     networks:
       - cardapio-network
     restart: unless-stopped
+    # Healthcheck melhorado
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "cardapio_user", "-pcardapio_pass"]
-      timeout: 20s
-      retries: 10
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot_password"]
+      timeout: 10s
+      retries: 5
       interval: 10s
-      start_period: 40s
+      start_period: 30s
+    # Comando para configurações adicionais
+    command: 
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --innodb-buffer-pool-size=128M
+      - --max-connections=200
 
   # Interface do Banco
   phpmyadmin:
@@ -77,9 +86,10 @@ services:
       - "8080:80"
     environment:
       PMA_HOST: mysql
-      PMA_USER: cardapio_user
-      PMA_PASSWORD: cardapio_pass
+      PMA_USER: root
+      PMA_PASSWORD: root_password
       PMA_ARBITRARY: 1
+      UPLOAD_LIMIT: 50M
     depends_on:
       mysql:
         condition: service_healthy
@@ -95,25 +105,6 @@ services:
     networks:
       - cardapio-network
     restart: unless-stopped
-
-  # DevOps Tools
-  terraform:
-    image: hashicorp/terraform:1.5
-    volumes:
-      - ./infrastructure/terraform:/workspace
-    working_dir: /workspace
-    entrypoint: ["tail", "-f", "/dev/null"]
-    networks:
-      - cardapio-network
-
-  ansible:
-    image: cytopia/ansible:latest
-    volumes:
-      - ./infrastructure/ansible:/workspace
-    working_dir: /workspace
-    entrypoint: ["tail", "-f", "/dev/null"]
-    networks:
-      - cardapio-network
 
 volumes:
   mysql_data:
