inserindo testes do frontend e backend

--- a/cardapio-onlide/backend/.env.test
+++ b/cardapio-onlide/backend/.env.test
@@ -1,12 +1,10 @@
+# backend/.env.test - VERSÃO CORRIGIDA
 NODE_ENV=test
-PORT=3002
+PORT=0
 
-# Banco de Teste (usar diferente do desenvolvimento)
-DB_HOST=localhost
-DB_USER=cardapio_user
-DB_PASSWORD=cardapio_pass
-DB_NAME=cardapio_test_db
-DB_PORT=3306
+# Banco de Teste (SQLite em memória)
+DB_DIALECT=sqlite
+DB_STORAGE=:memory:
 
 # JWT
 JWT_SECRET=test-jwt-secret-123
@@ -14,3 +12,8 @@ JWT_EXPIRES_IN=1h
 
 # Desabilitar logs em teste
 SEQUELIZE_LOGGING=false
+LOG_LEVEL=error
+
+# Configurações específicas para teste
+TEST_TIMEOUT=30000
+DISABLE_REAL_DATABASE=true
