--- a/cardapio-onlide/backend/package.json
+++ b/cardapio-onlide/backend/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "NODE_ENV=test jest",
-    "test:watch": "NODE_ENV=test jest --watch",
-    "test:coverage": "NODE_ENV=test jest --coverage",
-    "test:ci": "NODE_ENV=test jest --ci --coverage --watchAll=false",
+    "test": "NODE_ENV=test jest --runInBand --forceExit",
+    "test:watch": "NODE_ENV=test jest --watch --runInBand",
+    "test:coverage": "NODE_ENV=test jest --coverage --runInBand --forceExit",
+    "test:ci": "NODE_ENV=test jest --ci --coverage --watchAll=false --runInBand --forceExit --verbose",
+    "test:unit": "NODE_ENV=test jest tests/unit --runInBand",
+    "test:integration": "NODE_ENV=test jest tests/integration --runInBand",
     "lint": "eslint src/ tests/ --ext .js",
     "lint:fix": "eslint src/ tests/ --ext .js --fix",
     "migrate": "node scripts/migrate.js",
@@ -31,9 +33,13 @@
     "nodemon": "^3.0.1",
     "jest": "^29.6.1",
     "supertest": "^6.3.3",
+    "sqlite3": "^5.1.6",
     "eslint": "^8.45.0",
-    "eslint-config-node": "^4.1.0",
-    "eslint-plugin-node": "^11.1.0"
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/plugin-transform-runtime": "^7.22.0",
+    "babel-jest": "^29.6.1",
+    "jest-junit": "^16.0.0"
   },
   "keywords": [
     "nodejs",
@@ -51,6 +57,7 @@
   "jest": {
     "testEnvironment": "node",
     "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"],
+    "setupFiles": ["<rootDir>/tests/env-setup.js"],
     "testMatch": ["**/tests/**/*.test.js"],
     "collectCoverageFrom": [
       "src/**/*.js",
@@ -58,9 +65,21 @@
       "!src/app.js"
     ],
     "coverageDirectory": "coverage",
-    "coverageReporters": ["text", "lcov", "html"],
+    "coverageReporters": ["text", "lcov", "html", "json"],
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
+      }
+    },
     "verbose": true,
     "forceExit": true,
-    "detectOpenHandles": true
+    "detectOpenHandles": true,
+    "maxWorkers": 1,
+    "testTimeout": 30000,
+    "clearMocks": true,
+    "restoreMocks": true
   }
 }
