--- a/.github/workflows/ci-basic.yml
+++ b/.github/workflows/ci-basic.yml
@@ -15,11 +15,11 @@ jobs:
       
       - name: 📦 Install Frontend Dependencies
         working-directory: ./cardapio-onlide/frontend
-        run: npm ci
+        run: npm install
       
       - name: 📦 Install Backend Dependencies
         working-directory: ./cardapio-onlide/backend
-        run: npm ci
+        run: npm install
       
       - name: 🧪 Test Frontend
         working-directory: ./cardapio-onlide/frontend
